partially successful fix for input changes on mobile. fixed issue where anonymous could bookmark and like

--- a/app/scss/_allrecipespage.scss
+++ b/app/scss/_allrecipespage.scss
@@ -110,9 +110,3 @@
     top: 124px;
   }
 }
-
-@media only screen and (min-device-width: 320px){
-  @viewport {
-    width: 321px;
-  }
-}
