--- a/app/scss/_authpages.scss
+++ b/app/scss/_authpages.scss
@@ -18,9 +18,9 @@
     margin: 0 auto;
     margin-bottom: 8px;
   }
-  input[type=submit] {
+  input[type="submit"] {
     width: 100px;
-    font-size: 30px;
+    font-size: 20px;
   }
   a {
     text-decoration: none;
@@ -45,4 +45,14 @@
   font-family: helvetica;
   margin: 0 auto;
   margin-top: 10px;
+}
+
+@media screen and (max-width: 570px){
+  input[type="submit"] {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    -webkit-text-align: center;
+    background: white;
+    border-radius: 10px;
+  }
 }
