--- a/app/scss/_crosspage.scss
+++ b/app/scss/_crosspage.scss
@@ -114,3 +114,9 @@ body {
     }
   }
 }
+
+@media only screen and (min-device-width: 320px){
+  @viewport {
+    width: 321px;
+  }
+}
