--- a/app/scss/_recipepage.scss
+++ b/app/scss/_recipepage.scss
@@ -144,4 +144,9 @@
     margin: 0 auto;
     margin-bottom: 10px;
   }
+  .cookit-button {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    -webkit-text-align: center;
+  }
 }
